--- a/templates/ticket_history.html
+++ b/templates/ticket_history.html
@@ -11,15 +11,18 @@
   </head>
 
   <body>
-    <div id="ctxtnav" class="nav">
-      <h2>Wiki Navigation</h2>
+    <div id="ctxtnav" class="nav" py:with="links = chrome.links">
+      <h2>Ticket Navigation</h2>
       <ul>
-        <li class="last"><a href="${href.wiki(page.name)}">View Latest Version</a></li>
+        <li class="last"><a py:with="link = links.up[0]" href="${link.href}"
+            title="${link.title}">Back to Ticket #${ticket.id}</a>
+        </li>
       </ul>
     </div>
 
-    <div id="content" class="wiki">
-      <h1>Change History of <a href="${href.wiki(page.name)}">$page_name</a></h1>
+    <div id="content" class="ticket">
+      <h1>Change History for Ticket #${ticket.id}</h1>
+
       <form py:if="history" class="printableform" method="get" action="">
         <input type="hidden" name="action" value="diff" />
         <div class="buttons">
@@ -44,7 +47,7 @@
                        checked="${idx == 0 or None}" />
               </td>
               <td class="version">
-                <a href="${href.wiki(page.name, version=item.version)}" title="View this version">$item.version</a>
+                <a href="${href.ticket(ticket.id, version=item.version)}" title="View this version">$item.version</a>
               </td>
               <td class="date">${format_datetime(item.date)}</td>
               <td class="author" title="IP-Address: $item.ipnr">$item.author</td>
