--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -7,7 +7,7 @@ h1, h2, h3, h4 {
  font-weight: bold;
  letter-spacing: -0.018em;
 }
-h1 { font-size: 19px; margin: .15em 1em 0 0 }
+h1 { font-size: 19px; margin: .15em 1em 0.5em 0 }
 h2 { font-size: 16px }
 h3 { font-size: 14px }
 hr { border: none;  border-top: 1px solid #ccb; margin: 2em 0 }
